[package]
name = "kani-life"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.3", features = ["ws"] }
futures = "0.3.28"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
shuttle-axum = "0.47.0"
shuttle-runtime = "0.47.0"
socketioxide = "0.14.0"
tokio = { version = "1.28.2", features = ["net"] }
tower-http = { version = "0.5.0", features = ["fs"] }
uuid = "1.10.0"
rand = "0.8.5"

# otel
opentelemetry = "0.27.0"
opentelemetry-otlp = { version = "0.27.0", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry-stdout = "0.27.0"
opentelemetry_sdk = { version = "0.27.0", features = ["rt-tokio"] }
# tracing
tracing = "0.1.40"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = "0.3.18"
